fix: doesn't allow cropping when it's switched off

--- a/src/app/scss/_sidebar.scss
+++ b/src/app/scss/_sidebar.scss
@@ -45,7 +45,7 @@ $sidebar-header-height: 48px;
 
   &__transcript {
     margin-block-start: $transcript-margin-block-start;
-    max-height: 544px;
+    max-height: 593px;
     overflow: auto;
   }
 }
