--- a/src/app/scss/_video-editor.scss
+++ b/src/app/scss/_video-editor.scss
@@ -99,7 +99,7 @@
     padding: 8px;
     text-align: center;
 
-    &:disabled {
+    &:read-only {
       color: var(--c-gray-700);
       cursor: not-allowed;
     }
